# IceNLPy

./: .gitignore  .python-version  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
lib/IceNLP/bat/demo/: parse.out
lib/IceNLP/bat/icetagger/: mogginn.out  paramDefault.txt  test.out
src/icenlpy/: __init__.py  cli.py  iceparser.py  icetagger.py  tokenizer.py  tree.py  utils.py
src/icenlpy/resources/IceNLP/bat/demo/: tagger.out
src/icenlpy/resources/IceNLP/bat/iceparser/testData/: prufa.out
test/: test_data.py  test_iceparser.py  test_icetagger.py  test_tokenizer.py  test_tree.py
