[tool.poetry]
name = "icenlpy"
version = "0.2.1"
description = "A python wrapper for the IceNLP java library"
authors = ["Hinrik Hafsteinsson <hinrik.hafst@gmail.com>"]
readme = "README.md"
packages = [{ include = "icenlpy", from = "src" }]
include = [{ path = "src/icenlpy/resources/IceNLP/dist/IceNLPCore.jar" }]

[tool.poetry.scripts]
icenlpy = "icenlpy.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.12.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
# pytest-mock = "^3.12.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "6.0"
addopts = "-vv"
testpaths = ["test"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
